@@ -1,17 +1,17 @@
 #!/usr/bin/env python
 
 #import sys
-import psana
+import _psana
 
 ##-----------------------------
 
 def get_cspad_data_object(evt, src) :
     """get cspad data object
     """
-    o = evt.get(psana.CsPad.DataV2, src)
+    o = evt.get(_psana.CsPad.DataV2, src)
     if o is not None : return o
 
-    o = evt.get(psana.CsPad.DataV1, src)
+    o = evt.get(_psana.CsPad.DataV1, src)
     if o is not None : return o
 
     return None
@@ -22,16 +22,16 @@ def get_cspad_config_object(env, src) :
     """get cspad config object
     """
     cfg = env.configStore()
-    o = cfg.get(psana.CsPad.ConfigV5, src)
+    o = cfg.get(_psana.CsPad.ConfigV5, src)
     if o is not None : return o
 
-    o = cfg.get(psana.CsPad.ConfigV4, src)
+    o = cfg.get(_psana.CsPad.ConfigV4, src)
     if o is not None : return o
 
-    o = cfg.get(psana.CsPad.ConfigV3, src)
+    o = cfg.get(_psana.CsPad.ConfigV3, src)
     if o is not None : return o
 
-    o = cfg.get(psana.CsPad.ConfigV2, src)
+    o = cfg.get(_psana.CsPad.ConfigV2, src)
     if o is not None : return o
 
     return None
@@ -42,7 +42,7 @@ def get_cspad_config_object(env, src) :
 def get_cspad2x2_data_object(evt, src) :
     """get cspad2x2 data object
     """
-    o = evt.get(psana.CsPad2x2.ElementV1, src)
+    o = evt.get(_psana.CsPad2x2.ElementV1, src)
     if o is not None : return o
 
     return None
@@ -53,10 +53,10 @@ def get_cspad2x2_config_object(env, src) :
     """get cspad2x2 config object
     """
     cfg = env.configStore()
-    o = cfg.get(psana.CsPad2x2.ConfigV2, src)
+    o = cfg.get(_psana.CsPad2x2.ConfigV2, src)
     if o is not None : return o
 
-    o = cfg.get(psana.CsPad2x2.ConfigV1, src)
+    o = cfg.get(_psana.CsPad2x2.ConfigV1, src)
     if o is not None : return o
 
     return None
@@ -67,7 +67,7 @@ def get_cspad2x2_config_object(env, src) :
 def get_camera_data_object(evt, src) :
     """get camera data object
     """
-    o = evt.get(psana.Camera.FrameV1, src)
+    o = evt.get(_psana.Camera.FrameV1, src)
     if o is not None : return o
 
     return None
@@ -78,7 +78,7 @@ def get_camera_config_object(env, src) :
     """get camera config object
     """
     cfg = env.configStore()
-    o = cfg.get(psana.Camera.FrameFexConfigV1, src)
+    o = cfg.get(_psana.Camera.FrameFexConfigV1, src)
     if o is not None : return o
 
     return None
@@ -89,13 +89,13 @@ def get_camera_config_object(env, src) :
 def get_princeton_data_object(evt, src) :
     """get princeton data object
     """
-    o = evt.get(psana.Princeton.FrameV2, src)
+    o = evt.get(_psana.Princeton.FrameV2, src)
     if o is not None : return o
 
-    o = evt.get(psana.Princeton.FrameV1, src)
+    o = evt.get(_psana.Princeton.FrameV1, src)
     if o is not None : return o
 
-    o = evt.get(psana.Pimax.FrameV1, src)
+    o = evt.get(_psana.Pimax.FrameV1, src)
     if o is not None : return o
 
     return None
@@ -106,22 +106,22 @@ def get_princeton_config_object(env, src) :
     """get princeton config object
     """
     cfg = env.configStore()
-    o = cfg.get(psana.Princeton.ConfigV5, src)
+    o = cfg.get(_psana.Princeton.ConfigV5, src)
     if o is not None : return o
 
-    o = cfg.get(psana.Princeton.ConfigV4, src)
+    o = cfg.get(_psana.Princeton.ConfigV4, src)
     if o is not None : return o
 
-    o = cfg.get(psana.Princeton.ConfigV3, src)
+    o = cfg.get(_psana.Princeton.ConfigV3, src)
     if o is not None : return o
 
-    o = cfg.get(psana.Princeton.ConfigV2, src)
+    o = cfg.get(_psana.Princeton.ConfigV2, src)
     if o is not None : return o
 
-    o = cfg.get(psana.Princeton.ConfigV1, src)
+    o = cfg.get(_psana.Princeton.ConfigV1, src)
     if o is not None : return o
 
-    o = cfg.get(psana.Pimax.ConfigV1, src)
+    o = cfg.get(_psana.Pimax.ConfigV1, src)
     if o is not None : return o
 
     return None
@@ -133,10 +133,10 @@ def get_pnccd_config_object(env, src) :
     """get pnccd config object
     """
     cfg = env.configStore()
-    o = cfg.get(psana.PNCCD.ConfigV2, src)
+    o = cfg.get(_psana.PNCCD.ConfigV2, src)
     if o is not None : return o
 
-    o = cfg.get(psana.PNCCD.ConfigV1, src)
+    o = cfg.get(_psana.PNCCD.ConfigV1, src)
     if o is not None : return o
 
     return None
@@ -147,10 +147,10 @@ def get_pnccd_config_object(env, src) :
 def get_epix_data_object(evt, src) :
     """get epix data object
     """
-    o = evt.get(psana.Epix.ElementV2, src)
+    o = evt.get(_psana.Epix.ElementV2, src)
     if o is not None : return o
 
-    o = evt.get(psana.Epix.ElementV1, src)
+    o = evt.get(_psana.Epix.ElementV1, src)
     if o is not None : return o
 
     return None
@@ -162,13 +162,13 @@ def get_epix_config_object(env, src) :
     """get epix config object
     """
     cfg = env.configStore()
-    o = cfg.get(psana.Epix.Config100aV1, src)
+    o = cfg.get(_psana.Epix.Config100aV1, src)
     if o is not None : return o
 
-    o = cfg.get(psana.Epix.Config10KV1, src)
+    o = cfg.get(_psana.Epix.Config10KV1, src)
     if o is not None : return o
 
-    o = cfg.get(psana.Epix.ConfigV1, src)
+    o = cfg.get(_psana.Epix.ConfigV1, src)
     if o is not None : return o
 
     return None
@@ -179,7 +179,7 @@ def get_epix_config_object(env, src) :
 def get_acqiris_data_object(evt, src) :
     """get acqiris data object
     """
-    o = evt.get(psana.Acqiris.DataDescV1, src)
+    o = evt.get(_psana.Acqiris.DataDescV1, src)
     if o is not None : return o
 
     return None
@@ -191,7 +191,7 @@ def get_acqiris_config_object(env, src) :
     """get acqiris config object
     """
     cfg = env.configStore()
-    o = cfg.get(psana.Acqiris.ConfigV1, src)
+    o = cfg.get(_psana.Acqiris.ConfigV1, src)
     if o is not None : return o
 
     return None
@@ -202,7 +202,7 @@ def get_acqiris_config_object(env, src) :
 def get_imp_data_object(evt, src) :
     """get imp data object
     """
-    o = evt.get(psana.Imp.ElementV1, src)
+    o = evt.get(_psana.Imp.ElementV1, src)
     if o is not None : return o
 
     return None
@@ -214,7 +214,7 @@ def get_imp_config_object(env, src) :
     """get imp config object
     """
     cfg = env.configStore()
-    o = cfg.get(psana.Imp.ConfigV1, src)
+    o = cfg.get(_psana.Imp.ConfigV1, src)
     if o is not None : return o
 
     return None
